# Modular-1

./: .gitignore  AGENTS.md  ARCHITECTURE_ANALYSIS.md  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Modular.sln  README.md  build.cmd  build.sh  cmake_install.cmake  install_manifest.txt  modular-tests-b12d07c_include.cmake  package-lock.json  test_api.cs
.github/workflows/: build.yml
.nuke/: build.schema.json
csharp/: Modular.sln
csharp/src/Modular.Cli/: Modular.Cli.csproj
csharp/src/Modular.FluentHttp/: Modular.FluentHttp.csproj
csharp/tests/Modular.Core.Tests/: DatabaseTests.cs
csharp/tests/Modular.FluentHttp.Tests/: FluentClientTests.cs  Modular.FluentHttp.Tests.csproj
docs/: ADAPTATION_RECOMMENDATIONS.md  AGENTS.md  API-BACKENDS-GUIDE.md  ARCHITECTURE_ANALYSIS.md  CATEGORY_ORGANIZATION.md  CODEBASE_COMPARISON.md  CODEBASE_ERRORS_ANALYSIS.md  CODEBASE_REVIEW_RECOMMENDATIONS.md  CONCEPTUAL_REPLACEMENTS_ANALYSIS.md  CSHARP_MIGRATION_INSTRUCTIONS.md  DEPENDENCY_SORTED_FILE_OPS_REVIEW.md  EVOLUTION_SUMMARY.md  GAMEBANANA-API-GUIDE.md  GUI Feature Parity Audit & Implementation Plan.md  GUI_RECOMMENDATIONS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_2.md  IMPROVEMENTS.md  INTEGRATION_ANALYSIS.md  Modular_1_Blueprint.md  NEXUSMODS_DISCREPANCIES.md  NEXUSMODS_SSO_INTEGRATION.md  PLUGIN_DEVELOPMENT.md  RATE_LIMITING_FIXES_SUMMARY.md  README.md  REORGANIZATION_IMPROVEMENTS.md  REORGANIZE_GUIDE.md  SWITCH_ARCHITECTURE.md  SWITCH_INTEGRATION.md  Steam-Client-Game-Operations.md  TASKS.md  TEST_RESULTS.md  TRACKING_VALIDATION.md  WEEK1_IMPLEMENTATION.md  WEEK2_TASKLIST.md  WEEK3_TASKLIST.md  WEEK4_TASKLIST.md  dependency_sorted_file_operations.md  steam-mod-installer-plan.md
docs/archive/: MODULAR_INTEGRATION_COMPARISON_CPP.md  NEXUSMODS_TRACKING_ANALYSIS_CPP.md  PRIORITIZED_DOWNLOADS_CPP.md  README.md  TEST_RESULTS_CPP.md  TRACKING_VALIDATION_SUMMARY.md  WEEK1_TASKLIST.md  WEEK2_IMPLEMENTATION.md  WEEK5_TASKLIST.md  WEEK6_TASKLIST.md  WEEK7_TASKLIST.md
docs/fluent/: INTERFACES.md  README.md
docs/plans/: searchable-nexusmods-backend.md
examples/ExamplePlugin/: ExamplePlugin.cs  ExamplePlugin.csproj  plugin.json
include/: LiveUI.h  NexusMods.h
include/core/: Config.h  Database.h  Exceptions.h  GameBanana.h  ILogger.h  NexusMods.h  Rename.h  Utils.h
include/fluent/: CMakeLists.txt  Exceptions.h  Fluent.h  IBodyBuilder.h  IFluentClient.h  IHttpFilter.h  IRateLimiter.h  IRequest.h  IRequestCoordinator.h  IResponse.h  IRetryConfig.h  Types.h
include/fluent/clients/: NexusModsClient.h
pkg/: PKGBUILD
pkg/modular/: config  packed-refs
pkg/pkg/modular-git/: .BUILDINFO  .MTREE  .PKGINFO
publish/gui-linux/: Modular.Gui  Modular.Gui.deps.json  Modular.Sdk.xml
src/: NexusMods.cpp  main.cpp
src/Modular.Cli/: Modular.Cli.csproj  Program.cs
src/Modular.Cli/Commands/: BrowseCommand.cs  CheckDependenciesCommand.cs  CollectionCommand.cs  DownloadCommand.cs  FetchCommand.cs  InstallCommand.cs  InteractiveCommand.cs  ListInstalledCommand.cs  LoginCommand.cs  RenameCommand.cs  RollbackCommand.cs  SearchCommand.cs  SteamInstallCommand.cs  UninstallCommand.cs  VerifyCommand.cs
src/Modular.Cli/Infrastructure/: ServiceConfiguration.cs  TypeRegistrar.cs
src/Modular.Cli/UI/: LiveProgressDisplay.cs
src/Modular.Core/: Modular.Core.csproj
src/Modular.Core/Archives/: ArchiveInventoryService.cs  ArchiveReaderFactory.cs  BlobStore.cs  SharpCompressArchiveReader.cs  ZipArchiveReader.cs
src/Modular.Core/Authentication/: NexusSsoClient.cs
src/Modular.Core/Backends/: BackendCapabilities.cs  BackendRegistry.cs  DownloadOptions.cs  DownloadProgress.cs  IModBackend.cs  SdkTypeAliases.cs
src/Modular.Core/Collections/: ModCollectionRepository.cs  ModCollectionService.cs
src/Modular.Core/Configuration/: AppSettings.cs  ConfigurationService.cs
src/Modular.Core/Database/: DownloadDatabase.cs  DownloadRecord.cs  DownloadStatus.cs  IDownloadRepository.cs  IMetadataCache.cs  ModMetadataCache.cs  ModularDatabase.cs  SqliteDownloadRepository.cs
src/Modular.Core/Dependencies/: AggregateVersionProvider.cs  BacktrackingDependencyResolver.cs  ConflictResolver.cs  DependencyEdge.cs  DependencyGraph.cs  FileConflictIndex.cs  GreedyDependencyResolver.cs  ModNode.cs  ModProfile.cs  OperationGraph.cs  PubGrubResolver.cs  ResolutionResult.cs
src/Modular.Core/Diagnostics/: DiagnosticService.cs
src/Modular.Core/Downloads/: DownloadEngine.cs  DownloadQueue.cs
src/Modular.Core/ErrorHandling/: ErrorBoundary.cs  RetryPolicy.cs
src/Modular.Core/Exceptions/: ModularException.cs
src/Modular.Core/GameDetection/: EngineDetection.cs  SteamGameScanner.cs  SteamLibraryScanner.cs  SteamLocator.cs
src/Modular.Core/Http/: HttpCache.cs  (+3 more)
src/Modular.Gui/: App.axaml  App.axaml.cs  Modular.Gui.csproj  Program.cs  ViewLocator.cs  app.manifest
src/Modular.Sdk/: GameIds.cs  IPluginMetadata.cs  Modular.Sdk.csproj
src/Modular.Switch/: Modular.Switch.csproj
src/cli/: LiveUI.cpp  main.cpp
src/core/: Config.cpp  Database.cpp  GameBanana.cpp  HtmlParser.cpp  HtmlParser.h  HttpClient.cpp  HttpClient.h  NexusMods.cpp  RateLimiter.cpp  RateLimiter.h  Rename.cpp  TrackingValidator.cpp  TrackingValidator.h  Utils.cpp
src/fluent/: BodyBuilder.cpp  BodyBuilder.h  CMakeLists.txt  FluentClient.cpp  FluentClient.h  HttpClientBridge.cpp  HttpClientBridge.h  Request.cpp  Request.h  Response.cpp  Response.h  RetryCoordinator.cpp  RetryCoordinator.h  Utils.h
src/fluent/clients/: NexusModsClient.cpp
src/fluent/filters/: AuthenticationFilter.h  DefaultErrorFilter.h  Filters.h  LoggingFilter.h  RateLimitFilter.h
tests/: test_config.cpp  test_database.cpp  test_main.cpp  test_utils.cpp
tests/Modular.Core.Tests/: BacktrackingResolverTests.cs  ConfigurationTests.cs  DatabaseTests.cs  FuzzyMatcherTests.cs  InstallerGameScopingTests.cs  IntegrationTests.cs  Modular.Core.Tests.csproj  SteamModInstallerTests.cs  UtilityTests.cs  VersionProviderTests.cs  VersionRangeTests.cs
tests/fluent/: interface_compile_test.cpp  test_fluent_client.cpp
(+236 files in other folders)
